src/app/main/employees/employees.theme.scss
@import 'node_modules/@angular/material/theming';
@mixin employees-theme($theme) {
  $accent: map-get($theme, accent);
  $emp-icon-color: #b8b8b8;
  $foreground: map-get($theme, foreground);
  $border-color: mat-color($foreground, button);

  employees-home {
    .employee-item {
      .image-container .mat-divider {
        border-top-color: mat-color($accent);
      }

      .employee-data span .square {
        background-color: mat-color($accent);
      }
    }
    .collapsible{
    .filter_style{
      border-color: mat-color($accent);
    }
    mat-panel-title mat-icon{
      border-color: $border-color;
    }
    mat-panel-title span{
      border-color: $border-color;
    }
  }
  }

  employees-detail {
    .mat-divider {
      border-top-color: mat-color($accent);
    }

    .employee-data span .mat-icon,
    .employee-type {
      color: $emp-icon-color;
    }
  }



}

